# YOGA-Lyze-Pose-Correction

./: README.md
yoga-backend/: ReadMe.md  pyproject.toml  test_data.csv  train_data.csv  walkthrough.md.resolved
yoga-backend/app/: database.py  main.py
yoga-backend/app/data/: pose_references.json
yoga-backend/app/models/: __init__.py  contact.py  user.py
yoga-backend/app/routers/: admin.py  auth.py  contact.py  pose.py
yoga-backend/app/schemas/: contact.py  pose.py  token.py  user.py
yoga-backend/app/services/: angle_service.py  classifier_service.py  movenet.py  pose_service.py  preprocess.py  trainer.py
yoga-backend/csv_per_pose/: chair.csv  cobra.csv  dog.csv  no_pose.csv  shoudler_stand.csv  traingle.csv  tree.csv  warrior.csv
yoga-backend/exported_models/: class_names.json  pose_classifier.keras  weights_best.keras
yoga-backend/scripts/: preprocess.py  train.py
yoga-frontend/: index.html  package-lock.json  package.json
yoga-frontend/public/model/: model.json
yoga-frontend/src/: App.jsx  index.css  main.jsx
yoga-frontend/src/components/: AdminLayout.jsx  Footer.jsx  ModelLoader.jsx  Navbar.jsx  PrivateRoute.jsx
yoga-frontend/src/context/: AuthProvider.jsx
yoga-frontend/src/data/: yoga-response.json
yoga-frontend/src/pages/: About.jsx  AdminMessages.jsx  AdminSettings.jsx  AdminStatistics.jsx  Contact.jsx  Dashboard.jsx  Home.jsx  LiveDetection.jsx  Login.jsx  PoseLibrary.jsx  Register.jsx  Support.jsx  UploadImage.jsx  UserStatistics.jsx
yoga-frontend/src/services/: api.js
yoga-frontend/src/utils/: poseFeedback.js
(+2 files in other folders)
