[project]
name = "yogaproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pyjwt",
    "pwdlib[argon2]",
    "email-validator",
    "pytest",
    "httpx",
    "anyio[trio]",
    "tensorflow",
    "pandas",
    "scikit-learn",
    "tensorflowjs",
    "opencv-python>=4.13.0.92",
    "websockets",
    "tqdm",
]
